# VKEncodeMusic

./: .gitignore  README.md  TODO.md
android/: TODO.md  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cheerylee/vkencodemusic/: AboutActivity.java  MusicActivity.java  MusicAdapter.java  MusicEncoder.java  PreferencesActivity.java  SQLReader.java  Settings.java  SettingsActivity.java  Song.java
android/app/src/main/res/layout/: activity_about.xml  activity_music.xml  activity_settings.xml  item_song.xml
android/app/src/main/res/menu/: menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: preferences.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cheerylee/vkencodemusic/: AboutActivity.java  MusicActivity.java  MusicAdapter.java  MusicEncoder.java  SQLReader.java  SongWidget.java  SongWidgetNonRoot.java  SongWidgetRoot.java
app/src/main/res/layout/: activity_about.xml  activity_music.xml  item_song.xml  song_widget.xml  song_widget_nonroot.xml  song_widget_root.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
desktop/: CMakeLists.txt  README.md
desktop/src/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  CMakeLists.txt  EncoderWindow.cpp  EncoderWindow.h  EncoderWindow.ui  MusicEncoder.cpp  MusicEncoder.hpp  main.cpp  vkencodemusic.qrc
gradle/wrapper/: gradle-wrapper.properties
